--- a/app/src/main/res/layout/fragment_going_to_stop.xml
+++ b/app/src/main/res/layout/fragment_going_to_stop.xml
@@ -9,6 +9,15 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textSize="30dp"
         android:text="@string/slowing" />
+
+    <TextView
+        android:id="@+id/text_counter"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:textSize="40dp"
+        android:text="counting" />
 
 </FrameLayout>
